[package]
name = "o2versioner"
version = "0.1.0"
authors = ["Lichen Liu <issac.liu@mail.utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-session = "0.4"
actix-web = "3"
config = "0.10"
env_logger = "0.8"
futures = "0.3"
itertools = "0.9"
log = "0.4"
mysql_async = { version = "0.25.0" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.23", features = ["full"] }
tokio-serde = { version = "0.6", features = ["json"] }
tokio-util = { version = "0.3", features = ["codec"] }
uuid = { version = "0.8", features = ["v4"] }