[package]
name = "o2versioner"
version = "0.1.0"
authors = ["Lichen Liu <issac.liu@mail.utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-trait = "0.1"
bb8 = "0.5"
clap = "2.33"
config = "0.10"
futures = "0.3"
itertools = "0.9"
mysql_async = { version = "0.25.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.23", features = ["full"] }
tokio-serde = { version = "0.6", features = ["json"] }
tokio-util = { version = "0.3", features = ["codec"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
unicase = "2.6"