[package]
authors = ["Lichen Liu <issac.liu@mail.utoronto.ca>"]
edition = "2018"
name = "o2versioner"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bb8 = "0.6"
bb8-postgres = "0.6"
chrono = {version = "0.4", features = ["serde"]}
clap = "2.33"
config = "0.10"
csv = "1.1"
flate2 = "1.0"
futures = "0.3"
itertools = "0.9"
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
strum = {version = "0.20", features = ["derive"]}
tokio = {version = "0.3", features = ["full"]}
tokio-postgres = "0.6"
tokio-serde = {version = "0.7", features = ["json"]}
tokio-util = {version = "0.5", features = ["codec"]}
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
unicase = "2.6"
uuid = {version = "0.8", features = ["serde", "v4"]}
